removes body margin to prevent scrollbar

--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -21,6 +21,7 @@ General
 *********/
 body {
   font-family: sans-serif;
+  margin: 0;
 }
 h1 {
   font-size: 3.5em;
